# ErisPulse-EmailForwarder

./: LICENSE  README.md  pyproject.toml
EmailForwarder/: Core.py
